[gd_scene load_steps=7 format=2]

[ext_resource path="res://bar/assets/Peace Sans.otf" type="DynamicFontData" id=1]
[ext_resource path="res://StartSequence/dronning_mette_2.png" type="Texture" id=2]
[ext_resource path="res://StartSequence/StartSequenceAct1.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("main_label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in_out"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("press_text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StartSequenceAct1" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="main_label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.307692 )
margin_left = 575.804
margin_top = 31.6542
margin_right = 1072.8
margin_bottom = 298.654
custom_fonts/font = SubResource( 1 )
text = "A plague is sweeping the land
and because of this
queen Margarette of Albur
hath decreed that all
taverns shall be closed
by the stroke 
of midnight"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="press_text" type="Label" parent="."]
margin_left = 581.497
margin_top = 408.625
margin_right = 1078.5
margin_bottom = 471.625
custom_fonts/font = SubResource( 1 )
text = "Press E to continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_anim" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 2 )

[node name="press_anim" type="AnimationPlayer" parent="."]
anims/fade_in_out = SubResource( 3 )
[connection signal="animation_finished" from="main_anim" to="." method="_on_main_anim_animation_finished"]
